feat: implement security auditing, real-time notifications via Redis, and comprehensive admin management features